Fix off-center dialog display

--- a/grid.css
+++ b/grid.css
@@ -18,3 +18,8 @@
 	cursor: hand;
 }
 
+#creature {
+	width: 800px;
+	height: 600px;
+	display: none;
+}
